# Personal-CRM

./: .dockerignore  .gitignore  AI_README.md  BUILD_LOG.md  README.md  THIRD_PARTY_NOTICES.md
docs/: api.md  architecture.md  audit-report.md  authentication.md  backend.md  database.md  deployment.md  domain-model.md  frontend.md  integrations.md  jobs-automation.md  known-issues.md  overview.md  roadmap.md  search.md  security.md  state-management.md  testing.md  troubleshooting.md
docs-user/: contacts.md  dashboard.md  faq.md  getting-started.md  import-export.md  notes.md  search.md  settings.md  tags.md  tasks.md  troubleshooting.md
personal-crm-agents/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
personal-crm-api/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
personal-crm-clients/: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  turbo.json
personal-crm-clients/apps/desktop-linux/src-tauri/: Cargo.toml  tauri.conf.json
personal-crm-clients/apps/desktop-linux/src-tauri/src/: main.rs
personal-crm-docs/: README.md  agents-and-skills.md  api-overview.md  architecture-overview.md  auth-flows.md  data-model.md  deployment.md  local-development.md  memory-system.md  next-step-backlog.md  repo-map.md  troubleshooting.md
personal-crm-platform/: .env.example  README.md  docker-compose.override.yml  docker-compose.yml
scripts/: publish-github.ps1
(+112 files in other folders)
