[package]
name = "personal-crm-desktop-linux"
version = "0.1.0"
description = "Personal CRM Linux desktop shell"
authors = ["Personal CRM"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

